--- a/inicio.html
+++ b/inicio.html
@@ -58,29 +58,29 @@
 
             <div class="container">
 
-                        <div class="container">
-                            <div class="container">
-                                <br>
-                                <h2><b>Tus competiciones</b></h2>
-                                <br>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <h5 class="card-title font-black">Special title treatment</h5>
-                                                <p class="card-text font-black">With supporting text below as a natural
-                                                    lead-in to
-                                                    additional content.</p>
-                                                <a href="#" class="btn btn-coral">Go somewhere</a>
-                                            </div>
-                                        </div>
+                <div class="container">
+                    <div class="container">
+                        <br>
+                        <h2><b>Tus competiciones</b></h2>
+                        <br>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title font-black">Special title treatment</h5>
+                                        <p style="margin:0" class="card-text font-black">Division: Veterano</p>
+                                        <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p>
+                                        <a href="competicion.html" class="btn btn-coral">Iniciar
+                                            competicion</a>
                                     </div>
                                 </div>
-
-                                <br>
-                                <br>
                             </div>
                         </div>
+
+                        <br>
+                        <br>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
