--- a/podio.html
+++ b/podio.html
@@ -6,66 +6,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <title>Podio</title>
 </head>
 
 <body>
 
 
-<div class="bg-deepBlue">
+    <div class="bg-deepBlue">
 
-    <div class="container">
-        <h1 align="center" style="padding: 15px 10px 5px 10px; font-weight: 600;">Archero</h1>
-    </div>
+        <div class="container">
+            <h1 align="center" style="padding: 15px 10px 5px 10px; font-weight: 600;">Archero</h1>
+        </div>
 
 
-    <hr>
-
-</div>
-
-<div class="container">
-
-    <div class="container">
-        <br>
-        <h2><b>Clasificación:</b></h2>
+        <hr>
 
     </div>
-</div>
-<div class="container d-flex flex-column justify-content-between"
-     style="padding-left:10%; padding-right:10%;
+
+    <div class="container">
+
+        <div class="container">
+            <br>
+            <h2><b>Clasificación:</b></h2>
+
+        </div>
+    </div>
+    <div class="container d-flex flex-column justify-content-between" style="padding-left:10%; padding-right:10%;
      height:70vh">
-    <div class="form-group" style="margin-top:3vh">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col"></th>
-                <th scope="col">Participante</th>
-                <th scope="col">Puntos</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>25</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>22</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry the Bird</td>
-                <td>19</td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="form-group" style="margin-top:3vh">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Participante</th>
+                        <th scope="col">Puntos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>25</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>22</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry the Bird</td>
+                        <td>19</td>
+                    </tr>
+                </tbody>
+            </table>
 
 
 
@@ -73,75 +72,76 @@
             <div class="form-group" style="margin-top:5vh">
                 <table class="table">
                     <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">Participante</th>
-                        <th scope="col">Puntos</th>
-                    </tr>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Participante</th>
+                            <th scope="col">Puntos</th>
+                        </tr>
                     </thead>
                     <div style="overflow: scroll; max-height: 15vh">
                         <tbody>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td>Mark</td>
-                            <td>25</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td>Jacob</td>
-                            <td>22</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">6</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">7</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">8</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">9</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">10</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">11</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">13</th>
-                            <td>Larry the Bird</td>
-                            <td>19</td>
-                        </tr>
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>Mark</td>
+                                <td>25</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>Jacob</td>
+                                <td>22</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">7</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">8</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">9</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">10</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">11</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">12</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">13</th>
+                                <td>Larry the Bird</td>
+                                <td>19</td>
+                            </tr>
                         </tbody>
                     </div>
                 </table>
             </div>
-    </div>
+        </div>
 
+        <br>
+        <a href="competicion.html" onclick="inscribir()" id="nombre" class="btn btn-coral" style="margin-bottom:5vh">Ver
+            mis rondas</a>
+        <br>
+    </div>
     <br>
-    <button onclick="inscribir()" id="nombre" class="btn btn-coral" style="margin-bottom:5vh">Ver mis rondas</button>
     <br>
-</div>
-<br>
-<br>
 
 </body>
