Pagina de la ronda

--- a/inicio.html
+++ b/inicio.html
@@ -67,11 +67,10 @@
                             <div class="col-sm-6">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title font-black">Special title treatment</h5>
+                                        <h5 class="card-title font-black">Nombre_competición</h5>
                                         <p style="margin:0" class="card-text font-black">Division: Veterano</p>
-                                        <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p>
-                                        <a href="competicion.html" class="btn btn-coral">Iniciar
-                                            competicion</a>
+                                        <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p><br>
+                                        <a href="competicion.html" class="btn btn-coral">Ver competicion</a>
                                     </div>
                                 </div>
                             </div>
