--- a/competicion.html
+++ b/competicion.html
@@ -27,7 +27,10 @@
 
   <div class="container">
 
+    <a href="inicio.html" class="btn btn-coral">Vovler</a>
+
     <div class="container">
+
       <br>
       <h2 align="center"><b>Competición: nombre</b></h2>
       <br>
