--- a/podio.html
+++ b/podio.html
@@ -30,9 +30,10 @@
 
     <div class="container">
 
+        <a href="competicion.html" class="btn btn-coral">Vovler</a>
         <div class="container">
             <br>
-            <h2><b>Clasificación:</b></h2>
+            <h2 align="center"><b>Clasificación:</b></h2>
 
         </div>
     </div>
@@ -137,7 +138,7 @@
         </div>
 
         <br>
-        <a href="competicion.html" onclick="inscribir()" id="nombre" class="btn btn-coral" style="margin-bottom:5vh">Ver
+        <a href="competicion.html" onclick="inscribir()" id="nombre" class="btn btn-coral" style="margin-bottom:5vh">Volver a
             mis rondas</a>
         <br>
     </div>
