--- a/inicio.html
+++ b/inicio.html
@@ -67,7 +67,7 @@
                             <div class="col-sm-6">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title font-black">Nombre_competición</h5>
+                                        <h5 class="card-title font-black">Competicion en Loja</h5>
                                         <p style="margin:0" class="card-text font-black">Division: Veterano</p>
                                         <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p><br>
                                         <a href="competicion.html" class="btn btn-coral">Ver competicion</a>
@@ -100,11 +100,10 @@
                             <div class="col-sm-6">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title font-black">Special title treatment</h5>
-                                        <p class="card-text font-black">With supporting text below as a natural
-                                            lead-in to
-                                            additional content.</p>
-                                        <a href="#" class="btn btn-coral">Go somewhere</a>
+                                        <h5 class="card-title font-black">Competicion en Alhaurin</h5>
+                                        <p style="margin:0" class="card-text font-black">Division: Veterano</p>
+                                        <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p><br>
+                                        <a href="competicion.html" class="btn btn-coral">Ver competicion</a>
                                     </div>
                                 </div>
                             </div>
@@ -114,11 +113,10 @@
                             <div class="col-sm-6">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title font-black">Special title treatment</h5>
-                                        <p class="card-text font-black">With supporting text below as a natural
-                                            lead-in to
-                                            additional content.</p>
-                                        <a href="#" class="btn btn-coral">Go somewhere</a>
+                                        <h5 class="card-title font-black">Competicion en Málaga</h5>
+                                        <p style="margin:0" class="card-text font-black">Division: Veterano</p>
+                                        <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p><br>
+                                        <a href="competicion.html" class="btn btn-coral">Ver competicion</a>
                                     </div>
                                 </div>
                             </div>
@@ -128,11 +126,10 @@
                             <div class="col-sm-6">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title font-black">Special title treatment</h5>
-                                        <p class="card-text font-black">With supporting text below as a natural
-                                            lead-in to
-                                            additional content.</p>
-                                        <a href="#" class="btn btn-coral">Go somewhere</a>
+                                        <h5 class="card-title font-black">Competicion en Loja</h5>
+                                        <p style="margin:0" class="card-text font-black">Division: Veterano</p>
+                                        <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p><br>
+                                        <a href="competicion.html" class="btn btn-coral">Ver competicion</a>
                                     </div>
                                 </div>
                             </div>
