--- a/podio.html
+++ b/podio.html
@@ -30,7 +30,7 @@
 
     <div class="container">
 
-        <a href="competicion.html" class="btn btn-coral">Vovler</a>
+        <a href="competicion.html" class="btn btn-coral">Volver</a>
         <div class="container">
             <br>
             <h2 align="center"><b>Clasificación:</b></h2>
@@ -138,7 +138,8 @@
         </div>
 
         <br>
-        <a href="competicion.html" onclick="inscribir()" id="nombre" class="btn btn-coral" style="margin-bottom:5vh">Volver a
+        <a href="competicion.html" onclick="inscribir()" id="nombre" class="btn btn-coral"
+            style="margin-bottom:5vh">Volver a
             mis rondas</a>
         <br>
     </div>
