--- a/competicion.html
+++ b/competicion.html
@@ -46,7 +46,7 @@
       <div class="row" style="padding: 10px">
         <div class="col-6">
           <p id="numRondasElem" style="margin:0">Rondas: </p>
-          <p id="puntTotal" style="margin:0">Puntuacion total:</p>
+          <p id="puntTotal" style="margin:0">Puntuación total:</p>
         </div>
         <div class="col-6">
           <p id="numeros9" style="margin:0">Numeros 9: </p>
