--- a/inicio.html
+++ b/inicio.html
@@ -40,8 +40,8 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                                     class="rounded-circle" width="150">
                                 <div class="mt-3">
-                                    <h4 id="nombre" style="font-weight: bold">Jesus moreno</h4>
-                                    <p id="division" class="text-secondary mb-1">Division: Joven</p>
+                                    <h4 id="nombre" style="font-weight: bold">Jesús Moreno</h4>
+                                    <p id="division" class="text-secondary mb-1">División: Joven</p>
                                     <p id="modalidad" class="text-muted font-size-sm">Modalidad: Arco desnudo</p>
                                 </div>
                             </div>
@@ -67,10 +67,10 @@
                             <div class="col-sm-6">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title font-black">Competicion en Loja</h5>
-                                        <p style="margin:0" class="card-text font-black">Division: Veterano</p>
+                                        <h5 class="card-title font-black">Competición en Loja</h5>
+                                        <p style="margin:0" class="card-text font-black">División: Veterano</p>
                                         <p style="margin:0" class="card-text font-black">Modalidad: Arco desnudo</p><br>
-                                        <a href="competicion.html" class="btn btn-coral">Ver competicion</a>
+                                        <a href="competicion.html" class="btn btn-coral">Ver competición</a>
                                     </div>
                                 </div>
                             </div>
