--- a/competicion.html
+++ b/competicion.html
@@ -57,7 +57,7 @@
     <br>
     <br>
 
-    <h4>Resultados de la ronda 1/12</h4>
+    <h4>Resultados de la ronda</h4>
     <div class="container">
       <div class="row three" align="center" style="padding: 5px">
         <div class="col-6">
