--- a/competicion.html
+++ b/competicion.html
@@ -116,7 +116,7 @@
   }
 
   function updateIniciarButton() {
-    if (numeroRonda >= 12) {
+    if (numeroRonda > 12) {
       btnIniciar = document.getElementById("btnRonda");
       btnIniciar.innerText = "Fin de la competencia";
     } else {
